manifests/backend.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: bebop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: gandalfthewhite/cl-backend:latest
          securityContext:
            runAsUser: 1337
            runAsGroup: 1337
            runAsNonRoot: true
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 9000
          args:
            - "9000"
            - "http://hls.bebop.lan:80"
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: bebop
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
  type: ClusterIP
